--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -48,7 +48,7 @@
                           materialDesign:ShadowAssist.ShadowDepth="Depth3"
                           BorderThickness="0" FontSize="14">
                         <StackPanel>
-                            <TextBox x:Name="AnimalName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                            <TextBox x:Name="AnimalName" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
                             <TextBox x:Name="ChipNumber" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Číslo čipu/tetování:" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
@@ -126,7 +126,12 @@
 
                 <StackPanel Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
                     <Button Style="{StaticResource MaterialDesignFlatAccentButton}" x:Name="Cancel" Content="Zrušit" Width="75" Margin="5,0,5,5"/>
-                    <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" x:Name="SaveToDatabase" Content="Uložit" Width="75" Margin="5,0,5,5"/>
+                    <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" x:Name="SaveToDatabase" Margin="5,0,5,5">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <materialDesign:PackIcon Kind="ContentSaveOutline"  Width="20" Height="20"/>
+                            <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">Uložit</TextBlock>
+                        </StackPanel>
+                    </Button>
                 </StackPanel>
             </Grid>
 
