--- a/ShelterEvidency/Views/SearchAnimalView.xaml
+++ b/ShelterEvidency/Views/SearchAnimalView.xaml
@@ -90,7 +90,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="ID" Binding="{Binding ID}"/>
+                <DataGridTextColumn MaxWidth="50" Header="ID" Binding="{Binding ID}"/>
                 <DataGridTextColumn Header="Jméno" Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Číslo čipu" Binding="{Binding ChipNumber}"/>
                 <DataGridTextColumn Header="Pohlaví" Binding="{Binding Sex}"/>
